--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,21 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.sandeep.cryptocurrencyappyt">
+    xmlns:tools="http://schemas.android.com/tools">
 
     <uses-permission android:name="android.permission.INTERNET" />
     <application
-        android:name="code.sandeep.cryptocurrencyappyt.CoinApplication"
+        android:name=".CoinApplication"
         android:allowBackup="true"
+        android:dataExtractionRules="@xml/data_extraction_rules"
+        android:fullBackupContent="@xml/backup_rules"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.CryptocurrencyApp">
+        android:theme="@style/Theme.CryptocurrencyApp"
+        tools:targetApi="31">
         <activity
-            android:name="code.sandeep.cryptocurrencyappyt.presentation.MainActivity"
+            android:name="code.sandeep.cryptocurrency.presentation.MainActivity"
             android:exported="true"
             android:label="@string/app_name"
-            android:theme="@style/Theme.CryptocurrencyApp.NoActionBar">
+            android:theme="@style/Theme.CryptocurrencyApp">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
